# immortals_GUI

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  Immortals-UI.pro  Immortals-UI.sln  Immortals-UI.vcxproj  Immortals-UI.vcxproj.filters  Immortals_GUI.qmlproject  Immortals_GUI.qmlproject.qtds  Page1Form.ui.qml  README.md  client.cc  client.h  immo.grpc.pb.cc  immoclient.cpp  main.cpp  main.qml  qml.qrc  qmlmodules
content/: Addressbox.qml  AgentListView.qml  AgentPanel.qml  AgentPopup.qml  App.qml  CMakeLists.txt  Generalbox.qml  Grpcbox.qml  ImmoPanel.ui.qml  NodeListView.qml  NodePanel.qml  NodePopup.qml  Screen01.ui.qml  Screen02.ui.qml
imports/: CMakeLists.txt
imports/Immortals_GUI/: CMakeLists.txt  Constants.qml  qmldir
imports/Immortals_GUI/designer/: plugin.metainfo
src/: agentModel.cpp  agentModel.h  immo.grpc.pb.h  immo.pb.cc  immo.pb.h  immoClient.cpp  immoClient.h  import_qml_plugins.h  initdb.cpp  initdb.h  main.cpp  nodeModel.cpp  nodeModel.h
